src/objects/Minimum_Waiver__c.object
<CustomObject>
    <description>Used to track minimum fee waivers for opportunities</description>
    <fields>
        <fullName>Anticipated_additional_investment_within__c</fullName>
        <label>Anticipated Additional Investment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Required</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <description>Used to track and manage the Discount, and it used to determine who the Minimum Waiver record should be routed to.</description>
        <label>Discount</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Distribution_Channel__c</fullName>
        <formula>TEXT(Opportunity__r.Account.Distribution_Sub_Channel__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Distribution Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Investment_on_MFS_or_Separate_Acc__c</fullName>
        <label>Investment on MFS or Separate Acc</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Minimum Waiver</relationshipLabel>
        <relationshipName>Minimum_Waiver</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prospective_Client__c</fullName>
        <formula>Opportunity__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prospective Client</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stated_minimum__c</fullName>
        <label>Stated minimum</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Minimum Waiver</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Minimum_Waiver_Approvers_Minimum_Waiver</fullName>
        <filterScope>Queue</filterScope>
        <label>Minimum Waiver Approvers</label>
        <queue>Minimum_Waiver_Approvers</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Minimum Waiver Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Minimum Waiver</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>